  - a few CRC algorithms (e.g. fcs16, fcs32, crc32c, crc32_mpeg2, crc64) do not print the Jacksum CRC definition code
    if --info has been requested
  - issue #36 - If multiple algorithms have been selected and file size is not wanted, Jacksum does not find valid entries
  - issue #37 - Parser does not find valid entries if algorithm "none" (no hashing) has been selected

- improved performance:
  - used a short buffer for the --header output

- updated documentation:
  - added info about the usage of the internal state value for verification of test vectors submitted for the NIST competition
    in the manpage for skein-256.
  - added the "Go API" to the compatibility lists


Jacksum 3.7.0, Aug 26, 2023

- new features:
  - added HMAC support
    - extended option -a to understand HMAC definitions, including optional truncations
    - added option -k, and alias --key to specify the secret for HMACs
    - added option --hmacs to print all hash functions that work with HMAC
    - allowed option --info for gathering HMAC info to print HMAC parameters such as
      - the underlying cryptographic hash
      - a specified truncation in both bits and bytes
      - how many bits a truncated length should have at least
      - whether a specified truncated length follows the RFC recommendation
      - how many bytes a specified key should have at least
      - whether the specified key follows the RFC recommendation wrt key length
      - whether the specified key will be hashed
  - added string hashing support
    - added option --string-list to calculate hash values from strings stored in text files
    - added options --string-list-charset, and alias --charset-string-list
    - added option --ignore-empty-lines
    - added formatter alias #MESSAGE for #FILENAME
  - added console input mode
    - added password mode, and readline mode for option -q (and -k)
    - added option --charset-console, and alias --console-charset
  - added encodings